<resources>
    <string name="app_name">CCIS</string>
    <string name="title_activity_home_nav">Chi tiết thông tin khách hàng</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CCIS Application</string>
    <string name="nav_header_subtitle">Version 1.0.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cấu hình</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="title_home">CCIS</string>
    <string name="title_dashboard">Khách hàng</string>
    <string name="title_notifications">Thông báo</string>
    <string name="title_activity_tax_invoice_detail">TaxInvoiceDetail</string>
    <string name="email">TÊN ĐĂNG NHẬP</string>
    <string name="passowrd">MẬT KHẨU</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="tit">HỆ THỐNG QUẢN LÝ VỆ SINH MÔI TRƯỜNG</string>
    <string name="show_pwd">Hiển thị mật khẩu</string>
    <string name="hide_pwd">Ẩn mật khẩu</string>
    <string name="loginoff">Đăng nhập offline</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Đăng ký tài khoản.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Username below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title_activity_login">Đăng nhập</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_cau_hinh">Cấu hình hệ thống</string>
    <string name="no_data_available">Chưa có dữ liệu trên máy. Đề nghị lấy dữ liệu từ Server !</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Địa chỉ máy chủ Webservice</string>
    <string name="pref_default_ipservice">14.248.85.241:88</string>

    <string name="pref_default_tencty">CÔNG TY TNHH MTV MTĐT HÀ NỘI</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string-array name="pthuc_ttoan">
        <item>Chọn ...</item>
        <item>Chuyển khoản</item>
        <item>Thanh toán điện tử</item>
        <item>Tiền mặt</item>
        <item>Tiền mặt hoặc chuyển khoản</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="scanning">Searching...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="no_printer_connected">No printer is connected</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Search for devices</string>
    <string name="connect_bluetooth_device_btn">Connect a Bluetooth Printer</string>
    <string name="print_btn">Test Page</string>
    <string name="option_btn">Print Option</string>
    <string name="bt_inquiry_btn">Inquiry Status</string>
    <string name="quit_btn">Quit</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="bt_not_enabled_leaving">Bluetooth is not enabled</string>
    <string name="print_line">"--------------------------------"  </string>
    <string name="alert_title">Re-connect</string>
    <string name="alert_message">Would you like to re-connect with a bluetooth printer?</string>
    <string name="alert_btn_positive">Yes</string>
    <string name="alert_btn_negative">No</string>
    <string name="contentdesctiption">content description</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_main">CCIS</string>
</resources>
