<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory android:title="Cấu hình hệ thống">

        <android.support.v7.preference.EditTextPreference
            android:summary="Xin mời cung cấp địa chỉ máy chủ publish web service"
            android:dialogMessage="Xin mời cung cấp địa chỉ máy chủ publish web service"
            android:capitalize="words"
            android:defaultValue="@string/pref_default_ipservice"
            android:inputType="textCapWords"
            android:key="IP_SERVICE"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />

        <android.support.v7.preference.EditTextPreference
            android:summary="Xin mời cung cấp tên công ty để hiển thị trên phiếu in biên nhận"
            android:dialogMessage="Xin mời cung cấp tên công ty để hiển thị trên phiếu in biên nhận"
            android:capitalize="words"
            android:defaultValue="@string/pref_default_tencty"
            android:inputType="textCapWords"
            android:key="TEN_CTY"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Công ty" />

        <android.support.v7.preference.EditTextPreference
            android:summary="Xin mời cung cấp tên chi nhánh để hiển thị trên phiếu in biên nhận"
            android:dialogMessage="Xin mời cung cấp tên chi nhánh để hiển thị trên phiếu in biên nhận"
            android:capitalize="words"
            android:inputType="textCapWords"
            android:key="TEN_CHINHANH"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Chi nhánh" />

        <android.support.v7.preference.EditTextPreference
            android:summary="Nhân viên thu"
            android:dialogMessage="Xin mời cung cấp tên nhân viên thu để hiển thị trên phiếu in biên nhận"
            android:capitalize="words"
            android:inputType="textCapWords"
            android:key="TEN_NVTHU"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Họ và tên viên thu" />

        <android.support.v7.preference.EditTextPreference
            android:summary="Số điện thoại"
            android:dialogMessage="Xin mời cung cấp số điện thoại để hiển thị trên phiếu in biên nhận"
            android:capitalize="words"
            android:inputType="number"
            android:key="SDT"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Số điện thoại" />

        <android.support.v7.preference.EditTextPreference
            android:summary="Số điện thoại CSKH"
            android:dialogMessage="Xin mời cung cấp số điện thoại CSKH để hiển thị trên phiếu in biên nhận"
            android:capitalize="words"
            android:inputType="number"
            android:key="SDT_CSKH"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Số điện thoại CSKH" />

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen><!--<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">-->

    <!--<SwitchPreference--><!--android:defaultValue="true"--><!--android:key="example_switch"--><!--android:summary="@string/pref_description_social_recommendations"--><!--android:title="@string/pref_title_social_recommendations" />-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. --><!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. --><!--<EditTextPreference--><!--android:capitalize="words"--><!--android:defaultValue="@string/pref_default_ipservice"--><!--android:inputType="textCapWords"--><!--android:key="example_text"--><!--android:maxLines="1"--><!--android:selectAllOnFocus="true"--><!--android:singleLine="true"--><!--android:title="@string/pref_title_display_name" />-->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. --><!-- NOTE: ListPreference's summary should be set to its value by the activity code. --><!--<ListPreference--><!--android:defaultValue="-1"--><!--android:entries="@array/pref_example_list_titles"--><!--android:entryValues="@array/pref_example_list_values"--><!--android:key="example_list"--><!--android:negativeButtonText="@null"--><!--android:positiveButtonText="@null"--><!--android:title="@string/pref_title_add_friends_to_messages" />-->

    <!--</PreferenceScreen>-->
